# aurans-contracts

./: .gitignore  Beaker.toml  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
contracts/aurans-manager/: Cargo.toml
contracts/aurans-manager/examples/: schema.rs
contracts/aurans-manager/schema/: aurans-manager.json
contracts/aurans-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_prices.json  response_to_verifier.json
contracts/aurans-manager/src/: contract.rs  error.rs  lib.rs  msg.rs  price.rs  state.rs  util.rs  verify.rs
contracts/aurans-manager/src/tests/: env_setup.rs  integration_test.rs
contracts/aurans-name/: Cargo.toml
contracts/aurans-name/examples/: schema.rs
contracts/aurans-name/schema/: aurans-name.json
contracts/aurans-name/schema/raw/: execute.json  instantiate.json  query.json  response_to_all_nft_info.json  response_to_config.json  response_to_nft_info.json
contracts/aurans-name/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  util.rs
contracts/aurans-resolver/: Cargo.toml
contracts/aurans-resolver/examples/: schema.rs
contracts/aurans-resolver/schema/: aurans-resolver.json
contracts/aurans-resolver/schema/raw/: execute.json  query.json  response_to_address_of.json  response_to_all_addresses_of.json  response_to_config.json  response_to_names.json
contracts/aurans-resolver/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  util.rs
devtools/: build_and_test  deploy_dev.sh  deploy_euphoria  deploy_euphoria.sh  deploy_local  deploy_serenity
docs/: flows.md  interfaces.md
scripts/config/: chain.js
