[workspace]
members = ['contracts/*']
resolver = "2"

[workspace.package]
authors = ["Aura Network"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aura-nw/aurans-contracts"
rust-version = "1.67"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.13.0
"""

[workspace.dependencies]
aurans-resolver = { path = "./contracts/aurans-resolver" }
aurans-name = { path = "./contracts/aurans-name" }
aurans-manager = { path = "./contracts/aurans-manager" }
cosmwasm-schema = "1.1.8"
cosmwasm-std = "1.1.8"
cosmwasm-storage = "1.1.8"
cw-multi-test = "0.16.1"
cw-storage-plus = "1.0.0"
cw-utils = "1.0.0"
cw2 = "1.0.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw-ownable = "0.5.1"
thiserror = { version = "1.0.37" }
schemars = "0.8.11"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
sha2 = "0.10.8"

[workspace.dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }
cosmwasm-storage = { version = "1.1.8" }
cw-multi-test = "0.16.1"

[profile.release.package.aurans-manager]
codegen-units = 1
incremental = false

[profile.release.package.aurans-name]
codegen-units = 1
incremental = false

[profile.release.package.aurans-resolver]
codegen-units = 1
incremental = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
